[package]
name = "starknet-scrape"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.4", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
eyre = "0.6.8"
glob = "0.3.2"
hex = "0.4.3"
num-bigint = { version = "0.4.0", default-features = false, features = [
    "serde",
] }
num-traits = { version = "0.2", default-features = false }
reqwest = "0.12.14"
rstest = "0.25.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["std"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
